Documentation: Update changelog

--- a/public/documentation/changelog.html
+++ b/public/documentation/changelog.html
@@ -20,7 +20,7 @@
 
 
     <a id="2.0-alpha.5"></a>
-    <h1>Chamilo 2.0 alpha 5 - Album, 2025-09-27</h1>
+    <h1>Chamilo 2.0 alpha 5 - Album, 2025-10-07</h1>
     <h3>Release notes - summary</h3>
     <p>
         Chamilo 2.0 (stable) will be a major release, a new branch for the Chamilo software.
@@ -77,6 +77,63 @@
     <h3>Fixed</h3>
 
     <ul aria-live="off">
+        <li>[2025-10-06] (<a href="https://github.com/chamilo/chamilo-lms/commit/76a17a8532b742f5983953ebe5c0dbb2ebc6d9b1">76a17a85</a>) Vendor: Update composer.lock before alpha 5 release</li>
+        <li>[2025-10-06] (<a href="https://github.com/chamilo/chamilo-lms/commit/b5eed28081c7322b8874f07f33f519c42575e59c">b5eed280</a>) Vendor: Update JS libs</li>
+        <li>[2025-10-06] (<a href="https://github.com/chamilo/chamilo-lms/commit/7a943db61da6d82012431be37b31c1b7377dcf1e">7a943db6</a>) UI: Fix component for saving and updating additional block content in admin page</li>
+        <li>[2025-10-06] (<a href="https://github.com/chamilo/chamilo-lms/commit/5606c8c5b9da2a48730d0a6df381818e11239834">5606c8c5</a>) UI: Add admin block for plugins</li>
+        <li>[2025-10-06] (<a href="https://github.com/chamilo/chamilo-lms/commit/a3be73fa307e47cfe74dff2072993ee497963279">a3be73fa</a> - <a href="https://task.beeznest.com/issues/23011">BT#23011</a>) Internal: #fix restoring lp default - when no LP</li>
+        <li>[2025-10-05] (<a href="https://github.com/chamilo/chamilo-lms/commit/a40e6c8fe9ec5b212487632bba42ff824f30d303">a40e6c8f</a> - <a href="https://task.beeznest.com/issues/23011">BT#23011</a>) Internal: Fix session condition in quizzes tracking</li>
+        <li>[2025-10-05] (<a href="https://github.com/chamilo/chamilo-lms/commit/0da4b2e96ef35aadc014c6de192a8a2db10a5d40">0da4b2e9</a> - <a href="https://task.beeznest.com/issues/23011">BT#23011</a>) Internal: Tracking: fix warning array offset null</li>
+        <li>[2025-10-05] (<a href="https://github.com/chamilo/chamilo-lms/commit/490580445b8faccd795238b6295a1d73037e0d94">49058044</a> - <a href="https://task.beeznest.com/issues/23011">BT#23011</a>) Internal: Tracking: Fix empty quizzes for session tutor</li>
+        <li>[2025-10-04] (<a href="https://github.com/chamilo/chamilo-lms/commit/7e370198b497cd7dd371f3c952d99d030b4f14a9">7e370198</a>) Internal: Fix Version20251002110001 migration</li>
+        <li>[2025-10-03] (<a href="https://github.com/chamilo/chamilo-lms/commit/1417f09d2f825250ef608131e8e133e56bb929de">1417f09d</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/2741">GH#2741</a>) Migrate LTI tables from plugin to core</li>
+        <li>[2025-10-03] (<a href="https://github.com/chamilo/chamilo-lms/commit/f88eb1d8e24e0961990fe07bfa3c4fab5e8abb91">f88eb1d8</a>) Portfolio: Remove PortfolioAttachmentRepository</li>
+        <li>[2025-10-03] (<a href="https://github.com/chamilo/chamilo-lms/commit/dbc7fcd1d441edc2e33d8c01e8b238b570811de7">dbc7fcd1</a>) Admin: Fix plugin list in admin blocks</li>
+        <li>[2025-10-03] (<a href="https://github.com/chamilo/chamilo-lms/commit/0f6259f9024663eeb556732a0113d3e37b71af4e">0f6259f9</a>) Internal: Improve Doctrine query interpretation as suggested by Psalm</li>
+        <li>[2025-10-02] (<a href="https://github.com/chamilo/chamilo-lms/commit/5a2620d8cfa797d1df2f8c4a1e3be1c1b7f09092">5a2620d8</a>) Internal: List plugins with the menu_administrator region assign when loading admin index blocks</li>
+        <li>[2025-10-02] (<a href="https://github.com/chamilo/chamilo-lms/commit/b073848f6bfd3af5b91025be14de80465ae6fcab">b073848f</a>) Internal: Allow saving the regions for plugin in `access_url_rel_plugin.configuration`</li>
+        <li>[2025-10-02] (<a href="https://github.com/chamilo/chamilo-lms/commit/894ff6f7c72d586813e0e0b1e928be877ae50f60">894ff6f7</a>) Internal: Skip migration if c_item_property table does not exist</li>
+        <li>[2025-10-02] (<a href="https://github.com/chamilo/chamilo-lms/commit/0b8c4cf6e86cb67455ec2f828dd4c953d20ff7b0">0b8c4cf6</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/2615">GH#2615</a>) Plugin: BuyCourses: Fix courses description query in BuyCourses catalogue</li>
+        <li>[2025-10-02] (<a href="https://github.com/chamilo/chamilo-lms/commit/a4541fe1fb8bc99b9ad67a844c417b0b1727a9d5">a4541fe1</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/2615">GH#2615</a>) Plugin: BuyCourses: Fix courses list index in catalogue</li>
+        <li>[2025-10-02] (<a href="https://github.com/chamilo/chamilo-lms/commit/1726c816214c7381b8e5dd434a767b85da9c5e90">1726c816</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/2615">GH#2615</a>) Plugin: BuyCourses: Update dependency on Currencies bundle</li>
+        <li>[2025-10-02] (<a href="https://github.com/chamilo/chamilo-lms/commit/eb239121e3674015086b8479df80d7a6e3ff12b8">eb239121</a>) Internal: Convert User::getCompleteName() (from 1.11) to User::getFullName() (master) and sibling methods</li>
+        <li>[2025-10-02] (<a href="https://github.com/chamilo/chamilo-lms/commit/e7a9c3298ffebe057b701a7f2ad01d1841c4f792">e7a9c329</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/2615">GH#2615</a>) Plugin: BuyCourses: Add checks on item.buyCourseData to avoid runtime errors</li>
+        <li>[2025-10-02] (<a href="https://github.com/chamilo/chamilo-lms/commit/c671841222c4282a327fadcd43a03eaf48337b81">c6718412</a>) BuyCourses: Use IllustrationRepository/AssetRepository for course and session images (drop SYS_COURSE_PATH/WEB_UPLOAD_PATH checks)</li>
+        <li>[2025-10-02] (<a href="https://github.com/chamilo/chamilo-lms/commit/c392a56aa79885709d5a31f26960452600fab490">c392a56a</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/2615">GH#2615</a>) Plugin: BuyCourses: Fix parameter declaration mismatch</li>
+        <li>[2025-10-02] (<a href="https://github.com/chamilo/chamilo-lms/commit/4d137cdf343f83f0b764c8d750fcedae4b8dcdfc">4d137cdf</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/2615">GH#2615</a>) Plugin: BuyCourses: Fix parameter declaration mismatch</li>
+        <li>[2025-10-02] (<a href="https://github.com/chamilo/chamilo-lms/commit/9c37fbb07b50e97f9de95b45389fe1c54a1e5593">9c37fbb0</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/2615">GH#2615</a>) Plugin: BuyCourses: Fix round() 3rd param deprecation for PHP 8.4</li>
+        <li>[2025-10-02] (<a href="https://github.com/chamilo/chamilo-lms/commit/4f6eceb067259635d325dee9d1d47287186fa46d">4f6eceb0</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/2615">GH#2615</a>) Plugin: BuyCourses: Fix URL</li>
+        <li>[2025-10-01] (<a href="https://github.com/chamilo/chamilo-lms/commit/1b1d07d9c2498071e9b4ac71df0fdb623e108974">1b1d07d9</a>) Migration: Fix when existing foreign keys in lti_* tables</li>
+        <li>[2025-10-01] (<a href="https://github.com/chamilo/chamilo-lms/commit/dc21b92e8a6992cc3cf1c2b5330a0bdfa58b7456">dc21b92e</a>) Migration: Add missing foreign keys to lti_* tables</li>
+        <li>[2025-10-01] (<a href="https://github.com/chamilo/chamilo-lms/commit/7b524fb129356b00788cd8a4a00269385165ead1">7b524fb1</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6836">GH#6836</a>) Portfolio: Migrating</li>
+        <li>[2025-10-01] (<a href="https://github.com/chamilo/chamilo-lms/commit/d59653e3192a6de6515618cb2f01b7a724c2927f">d59653e3</a> - <a href="https://task.beeznest.com/issues/22944">BT#22944</a>) Internal: Fix undefined-url to respect ThemeHelper fallback</li>
+        <li>[2025-10-01] (<a href="https://github.com/chamilo/chamilo-lms/commit/ea6e0b2681778fc1ef295ab94d3ca87da51c5bac">ea6e0b26</a> - <a href="https://task.beeznest.com/issues/22993">BT#22993</a>) Internal: Unified 403 Handling: Same Access-Restriction Message Across Vue & Twig</li>
+        <li>[2025-10-01] (<a href="https://github.com/chamilo/chamilo-lms/commit/642e2834dcf36e47f82b603a361a3588d06c3c4e">642e2834</a> - <a href="https://task.beeznest.com/issues/22992">BT#22992</a>) Survey: #fix remove c_id and question_id from queries because they do not exist anymore in the new structure</li>
+        <li>[2025-10-01] (<a href="https://github.com/chamilo/chamilo-lms/commit/fa3ffdaf01334ac2072e45d83911abe11bec5cbb">fa3ffdaf</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/2615">GH#2615</a>) Plugin: BuyCourses: Fix name field renamed to title</li>
+        <li>[2025-09-30] (<a href="https://github.com/chamilo/chamilo-lms/commit/1e7f196824d1ea2d6e2bcf74623974c5fb2dff66">1e7f1968</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6823">GH#6823</a>) Dropbox: Re-enable blogs tool</li>
+        <li>[2025-09-30] (<a href="https://github.com/chamilo/chamilo-lms/commit/e00aee23b2e366a683d8678ec8ddc2ee0f617a18">e00aee23</a> - <a href="https://task.beeznest.com/issues/22957">BT#22957</a>) Internal: Set empty string as default password for user entity</li>
+        <li>[2025-09-30] (<a href="https://github.com/chamilo/chamilo-lms/commit/ddec0d5eb1a0c3dd3f41934fb7f3d729052f20c9">ddec0d5e</a>) Language: Add JSON translation file for brazilian Portuguese</li>
+        <li>[2025-09-30] (<a href="https://github.com/chamilo/chamilo-lms/commit/497f82f19244c5a32ed3847d9115940ea8e9274e">497f82f1</a>) Internal: Update extrafield flags for 'my_terms','terms_ville','terms_villedustage' not included in migration</li>
+        <li>[2025-09-30] (<a href="https://github.com/chamilo/chamilo-lms/commit/5f5177ed43f3c1a44818c12d13014fee560bfdbb">5f5177ed</a>) Update LoginTokenAuthenticator.php</li>
+        <li>[2025-09-30] (<a href="https://github.com/chamilo/chamilo-lms/commit/864b766d1e99153d0083676ae7b6c23090454a48">864b766d</a> - <a href="https://task.beeznest.com/issues/22741">BT#22741</a>) Language: add missing variable</li>
+        <li>[2025-09-30] (<a href="https://github.com/chamilo/chamilo-lms/commit/b651eebbf8a4ad0bff36225121db9acf8b3aaaea">b651eebb</a>) Language: Update Arabic translation</li>
+        <li>[2025-09-30] (<a href="https://github.com/chamilo/chamilo-lms/commit/e2d6710831a35417d0e8eda2098cca16818f7ec0">e2d67108</a>) Language: Update Arabic translation (fix wrongly untranslated terms)</li>
+        <li>[2025-09-30] (<a href="https://github.com/chamilo/chamilo-lms/commit/f502ed6a70f47b8737d910865c7ea7348021516a">f502ed6a</a> - <a href="https://task.beeznest.com/issues/22897">BT#22897</a>) Exercise: #fix message to be shown only if user is course trainer and fix french translation</li>
+        <li>[2025-09-30] (<a href="https://github.com/chamilo/chamilo-lms/commit/36e9b2d1dfa6e6b57497a3df65608aca044007a7">36e9b2d1</a>) Language: Fix language terms in course creation form</li>
+        <li>[2025-09-29] (<a href="https://github.com/chamilo/chamilo-lms/commit/010cd8e001585f85cdfa539160dc0a4ae528f21b">010cd8e0</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/2615">GH#2615</a>) Plugin: BuyCourses: disable autoscape in templates</li>
+        <li>[2025-09-30] (<a href="https://github.com/chamilo/chamilo-lms/commit/46fd010a5e1f47750db7c7bf24e034e95f86bcad">46fd010a</a>) Script: Add support for 'display_text' fixture use for default extra fields + better removal of quotes</li>
+        <li>[2025-09-29] (<a href="https://github.com/chamilo/chamilo-lms/commit/c8834ac41ad6f5658461d399c3883a7efbc993e6">c8834ac4</a>) Display: Fix translations for user fields in profile edition</li>
+        <li>[2025-09-29] (<a href="https://github.com/chamilo/chamilo-lms/commit/709c10b346e45b1f4e0c3934bfb87b3672ca132b">709c10b3</a>) Display: Slightly improve display of admin report links and remove now unused method MySpace::getAdminActions()</li>
+        <li>[2025-09-29] (<a href="https://github.com/chamilo/chamilo-lms/commit/8723128afc527f71e3eb0988db4005dbe16af57a">8723128a</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/2615">GH#2615</a>) Plugin: BuyCourses: Fix course/session/service list</li>
+        <li>[2025-09-29] (<a href="https://github.com/chamilo/chamilo-lms/commit/77d37512ff27b19a31a0f6610c6a64aa706087fa">77d37512</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/2615">GH#2615</a>) Internal: Replacing legacy routes in templates</li>
+        <li>[2025-09-29] (<a href="https://github.com/chamilo/chamilo-lms/commit/ec03f379a4d69cd74041087837940766a87ff424">ec03f379</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/2615">GH#2615</a>) Internal: Replacing legacy routes in templates</li>
+        <li>[2025-09-29] (<a href="https://github.com/chamilo/chamilo-lms/commit/d41e1e1ea01c386245f75c34bca21bece3457e4a">d41e1e1e</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/2615">GH#2615</a>) Plugin: BBB: Fix install BBB plugin installation</li>
+        <li>[2025-09-29] (<a href="https://github.com/chamilo/chamilo-lms/commit/2490a7e968d358a2cce9c6363e23ee249cdfeaa0">2490a7e9</a> - <a href="https://task.beeznest.com/issues/22300">BT#22300</a>) Install: Remove LDAP PHP extension requirement: only needed for LDAP use or if installing from sources</li>
+        <li>[2025-09-29] (<a href="https://github.com/chamilo/chamilo-lms/commit/64b3aa12c06f756af1ad768c3eb6668c1d09b07a">64b3aa12</a> - <a href="https://task.beeznest.com/issues/22990">BT#22990</a>) Gradebook: #fix ranking calculation to show same position for users with the same score</li>
+        <li>[2025-09-27] (<a href="https://github.com/chamilo/chamilo-lms/commit/e324b4279d681db781113c35a7b1bf8aebbad3cf">e324b427</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6819">GH#6819</a>) Admin: Improve settings categorization</li>
+        <li>[2025-09-27] (<a href="https://github.com/chamilo/chamilo-lms/commit/cfd44943f9cc704bf93b2bc4333f4ae4036c8034">cfd44943</a>) Install: Fix language selection flow, i18n sync, and labels</li>
+
+
         <li>[2025-09-27] (<a href="https://github.com/chamilo/chamilo-lms/commit/34dab6fad85fc9a30453c21a99f7e458c62d15ab">34dab6fa</a>) Documentation: Update changelog for alpha.5</li>
         <li>[2025-09-26] (<a href="https://github.com/chamilo/chamilo-lms/commit/a912253c7851c41dec60b3e586ad82476c866524">a912253c</a>) Dropbox: Minor, fix error typo in query</li>
         <li>[2025-09-26] (<a href="https://github.com/chamilo/chamilo-lms/commit/772f7b089dc35d58c197c1c50f97c4f78bb9d2a0">772f7b08</a>) Dropbox: Stabilize migrations and tool seeding</li>
