Documentation: Update changelog

--- a/public/documentation/changelog.html
+++ b/public/documentation/changelog.html
@@ -77,6 +77,11 @@
     <h3>Fixed</h3>
 
     <ul aria-live="off">
+        <li>[2025-10-07] (<a href="https://github.com/chamilo/chamilo-lms/commit/d8488a60ad0dba5f8c8c1ad7aab90dc814ae8b51">d8488a60</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/4763">GH#4763</a>) Learnpath: Fix dates not showing in lp lists in categories</li>
+        <li>[2025-10-07] (<a href="https://github.com/chamilo/chamilo-lms/commit/8adf95c40ced21f70ea99542c1720fab77f7b6de">8adf95c4</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6609">GH#6609</a>) Learnpath: Add responsive style to the learning path list</li>
+        <li>[2025-10-06] (<a href="https://github.com/chamilo/chamilo-lms/commit/7337d9b4b196710281b7c4ad9852a73a7a98666c">7337d9b4</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/4316">GH#4316</a>) Survey: Add “Pending surveys” in user menu</li>
+        <li>[2025-10-06] (<a href="https://github.com/chamilo/chamilo-lms/commit/0683f66c82d7f7eb089c09b5c54f5f1a24596d23">0683f66c</a>) Vendor: Removing references to jquery-ui-dist</li>
+        <li>[2025-10-06] (<a href="https://github.com/chamilo/chamilo-lms/commit/0191d8a3cd937cf69ab003bcedac9877145eeab5">0191d8a3</a>) Vendor: Remove jquery-ui-dist</li>
         <li>[2025-10-06] (<a href="https://github.com/chamilo/chamilo-lms/commit/76a17a8532b742f5983953ebe5c0dbb2ebc6d9b1">76a17a85</a>) Vendor: Update composer.lock before alpha 5 release</li>
         <li>[2025-10-06] (<a href="https://github.com/chamilo/chamilo-lms/commit/b5eed28081c7322b8874f07f33f519c42575e59c">b5eed280</a>) Vendor: Update JS libs</li>
         <li>[2025-10-06] (<a href="https://github.com/chamilo/chamilo-lms/commit/7a943db61da6d82012431be37b31c1b7377dcf1e">7a943db6</a>) UI: Fix component for saving and updating additional block content in admin page</li>
