Documentation: Update changelog

--- a/public/documentation/changelog.html
+++ b/public/documentation/changelog.html
@@ -77,6 +77,15 @@
     <h3>Fixed</h3>
 
     <ul aria-live="off">
+        <li>[2025-10-09] (<a href="https://github.com/chamilo/chamilo-lms/commit/7e5caa90db9f25f9f867df67828e123e686dda0d">7e5caa90</a>) Migration: Fix plugin titles and remove plugins without a corresponding directory</li>
+        <li>[2025-10-09] (<a href="https://github.com/chamilo/chamilo-lms/commit/b349f14fb20984cf8f8f6dcabdd7555a65aa2c80">b349f14f</a>) Migration: Fix plugin titles and remove plugins without a corresponding directory</li>
+        <li>[2025-10-09] (<a href="https://github.com/chamilo/chamilo-lms/commit/50f450599d3ee26b8ab50aef982c80a0fdd65188">50f45059</a>) Migration: Fix plugin names migrated to the new plugin table</li>
+        <li>[2025-10-09] (<a href="https://github.com/chamilo/chamilo-lms/commit/8d1dc4043c275db44dbfedba75d073f0a426c922">8d1dc404</a>) Migration: Register the portfolio tool and its resource types</li>
+        <li>[2025-10-09] (<a href="https://github.com/chamilo/chamilo-lms/commit/7e0ba90878e57ce2dbd9c52b16ca5f6120abf3db">7e0ba908</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6722">GH#6722</a>) Glossary: Fix importing to include the first row</li>
+        <li>[2025-10-08] (<a href="https://github.com/chamilo/chamilo-lms/commit/e8f5560cc141fccf14e102e43c495f93ddd078d0">e8f5560c</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6883">GH#6883</a>) Internal: ExtraField: deduplicate organisationemail/azure_id (USER), fix display_text, and add unique index on (variable, item_type)</li>
+        <li>[2025-10-09] (<a href="https://github.com/chamilo/chamilo-lms/commit/9e83874796d8e8977ed104310bc19230e6471e6e">9e838747</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6722">GH#6722</a>) Glossary: Fix import and save of glossary terms</li>
+        <li>[2025-10-08] (<a href="https://github.com/chamilo/chamilo-lms/commit/92eb53d75f780d1badb60b02d6291d75939769da">92eb53d7</a>) Vendor: bump linkifyjs to v4.3.2</li>
+        <li>[2025-10-07] (<a href="https://github.com/chamilo/chamilo-lms/commit/c05025faaafaf75c16ff2415d1e3f61fd891bc5d">c05025fa</a>) Document: HTML inline preview + Uppy upload fix</li>
         <li>[2025-10-08] (<a href="https://github.com/chamilo/chamilo-lms/commit/00e9aa40de8c2beaa38970649f7840c92a048870">00e9aa40</a>) Language: Add new language terms</li>
         <li>[2025-10-07] (<a href="https://github.com/chamilo/chamilo-lms/commit/9375243cfb4de1ec812fec1b17dcf806b986e110">9375243c</a>) Language: Fix language terms in about.html.twig</li>
         <li>[2025-10-07] (<a href="https://github.com/chamilo/chamilo-lms/commit/c9d56051eb062cb9072166200a46bd1ba118ef1c">c9d56051</a>) QA: Change Behat tests to PHP 8.2 and 8.3 for now (8.4 not yet supported)</li>
